<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TheTodo</string>
    <string name="new_todo">new Todo</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login">Login</string>
    <string name="isImportant">Favorite</string>
    <string name="isDone">Done</string>
    <string name="todo_name">name of todo</string>
    <string name="action_settings">action settings</string>
    <string name="date">dd/mm/yy hh:mm</string>
    <string name="todo_description">description</string>
    <string name="create_todo">+</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="todo_date">date</string>
    <string name="cancel"> Cancel </string>
    <string name="sortdate">sort by Date</string>
    <string name="sortimportant">sort by Favorite</string>
    <string name="contacts">Contacts</string>
    <string name="add_remove_contact">Add/Remove Contacts</string>
    <string name="refresh">refresh</string>
    <string name="locationName">Choose location</string>
    <string name="todo_location">location</string>
    <string name="todooverview">Todo Overview</string>
    <string name="mapoverview">Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">Okay</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_name">Contact\'s Name</string>
    <string name="pick_contacts">Pick contacts</string>
    <string name="todos">Todos</string>
    <string name="choose_location">Choose location</string>
	<string name="contact_picture">Contact\'s Picture</string>
    <string name="todo_details">Todo details</string>
    <string name="choose_date">Choose date</string>
</resources>
