<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_todo_by_contact"
        android:title="@string/contacts"
        android:onClick="gotoTodoByContact">
    </item>
    <item
        android:id="@+id/menu_sortbydate"
        android:onClick="sortByDate"
        android:title="@string/sortdate">
    </item>
    <item
        android:id="@+id/menu_sortbyimportant"
        android:onClick="sortByImportance"
        android:title="@string/sortimportant">
    </item>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"      
        android:onClick="updateList"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/refresh"/>

</menu>
