<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/todo_edit_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/todo_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="100" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/todo_edit_desc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/todo_description"
        android:imeOptions="actionDone"
        android:inputType="text" 
        android:layout_below="@id/todo_edit_name" />

    <LinearLayout
        android:id="@+id/isDone_isImportant_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/todo_edit_desc" >

        <CheckBox
            android:id="@+id/isDone_context"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/isDone" />

        <CheckBox
            android:id="@+id/isImportant_context"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/isImportant" />
    </LinearLayout>

    <TextView
        android:id="@+id/datetime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rectangle_background"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:hint="@string/date"
        android:onClick="editDateTime"
        android:padding="5dp"
		android:textSize="20sp" 
        android:layout_below="@id/isDone_isImportant_LinearLayout" />
    
    <TextView
        android:id="@+id/location_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rectangle_background"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:hint="@string/locationName"
        android:onClick="editLocation"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_below="@id/datetime" />
	
	<ListView
        android:id="@+id/context_contacts_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp" 
        android:layout_below="@id/location_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="horizontal" 
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:onClick="deleteTodoItem"
            android:text="@string/delete" />

        <ImageButton
            android:id="@+id/add_contact"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:onClick="addRemoveContacts"
            android:src="@drawable/contacts" 
            android:scaleType="centerInside"
            android:contentDescription="@string/add_remove_contact" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:onClick="saveTodoItem"
            android:text="@string/save" />
    </LinearLayout>
</RelativeLayout>
